test/valid/maybe2.js
var head = function(l) { var x = l[0]; if (x !== undefined)  { return x; } else { return  undefined; } }   var z = head([1,2]);
